--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "conference",
   "version": "0.1.0",
-  "homepage": "https://kalaiy21.github.io/conference",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.5",
@@ -44,5 +43,6 @@
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.8"
-  }
+  },
+  "homepage": "https://kalaiy21.in"
 }
