--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.8"
   },
-  "homepage": "https://kalaiy21.in"
+  "homepage": "https://iciriac.in"
 }
